# usa-spending-hf

./: .gitignore  LICENSE  README.md  converter_pipeline.py  eda.ipynb  main.py  pyproject.toml
logs/: bulk_download_requests.jsonl
pipeline/ingest/: usaspend.py
pipeline/transforms/: parse.py
src/: extract.py  transform.py  upload.py
transforms/: usaspend.py
